--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.datasource.url=jdbc:mysql://140.143.242.232:3306/nice_some
-spring.datasource.username=root
-spring.datasource.password=Qq869689.
+spring.datasource.url=jdbc:mysql://140.143.242.232:3306/nice_some?zeroDateTimeBehavior=convertToNull&characterEncoding=utf8&characterSetResults=utf8
+
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
 # the project
+
 spring.jpa.hibernate.ddl-auto=update
 # Show or not log for each sql query
 spring.jpa.show-sql=true
