--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.url=jdbc:mysql://140.143.242.232:3306/nice_some?zeroDateTimeBehavior=convertToNull&characterEncoding=utf8&characterSetResults=utf8
-
+spring.datasource.username=root
+spring.datasource.password=Qq869689.
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
