--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,7 +42,7 @@ spring.devtools.livereload.enabled=true
 # 静态文件请求匹配方式
 spring.mvc.static-path-pattern=/**
 # 修改默认的静态寻址资源目录
-spring.resources.static-locations = classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
+#spring.resources.static-locations = classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
 spring.mvc.view.prefix=classpath:/templates/
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
