同步 基础无用代码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.redis.port=6379
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
 # the project
-
-spring.jpa.hibernate.ddl-auto=update
+#validate update
+spring.jpa.hibernate.ddl-auto=validate
 # Show or not log for each sql query
 spring.jpa.show-sql=true
 
